# xmiete

./: .gitignore  API.md  GEMINI.md  LICENSE  LICENSE-SPECIFICATION  LIFECYCLE.md  MANIFEST.md  README.md  RELEASE_ANNOUNCEMENT.md  SECURITY.md  docker-compose.yml  openapi.yaml  xmiete_schema.json
docs/: developer-guide.md  eudi-rollout.md  european-deposit-research.md
examples/: account_deposit_aareal.json  bank_guarantee_volksbank.json  e_depo_belgium.json  eudi_wallet_pid_deposit.json  insurance_generic.json  insurance_momo.json  qeaa_deposit_pledge_attestation.json  qeaa_kautions_nachweis.json  surety_caution_solidaire_fr.json  surety_elternbuergschaft_de.json  surety_guarantor_gb.json
sdk-examples/go/: README.md  client.go  example_test.go  go.mod
sdk-examples/go/auth/: validator.go
sdk-examples/go/eid/: models.go  service.go  webhook.go  webhook_test.go
sdk-examples/go/models/: models.go
sdk-examples/go/openid4vp/: models.go  service.go
sdk-examples/java/: README.md  pom.xml
sdk-examples/rust/: Cargo.toml  README.md
sdk-examples/rust/src/: lib.rs  main.rs  models.rs
sdk-examples/rust/src/auth/: mod.rs
sdk-examples/rust/src/eid/: mod.rs  service.rs  webhook.rs
sdk-examples/rust/src/openid4vp/: mod.rs  service.rs
sdk-examples/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk-examples/typescript/examples/: usage.ts
server/: .env.example  Dockerfile  go.mod  go.sum
server/cmd/server/: main.go
tests/: validate_schema.py
tests/invalid_examples/: invalid_state.json  invalid_tax_id.json  invalid_version.json
(+58 files in other folders)
