[package]
name = "xmiete-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the XMiete standard"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
